# aibm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MODEL_DIAGRAM.md  README.md  TODO.md  TODO_app_deployment.md  action_plan_activities.md  beta_release_plan.md  generate_diagram.py  package.json  pyproject.toml  release_notes_phase3.md  research_findings.md  speedup_simulation.md  web_app.md  wrangler.toml
.claude/agents/: travel-demand-expert.md
.claude/hooks/: post_edit_lint.sh
notebooks/: 01_population_activities.ipynb  02_destination_mode_choice.ipynb  pipeline_demo.ipynb  real_world_population.ipynb  scenario_comparison.ipynb  simulation_walkthrough.ipynb  synthesize_population.ipynb  synthetic_population.ipynb
scripts/: compare_scenarios.py  demo_destination_choice.py  example.py  generate_synth_pop.py
src/aibm/: __init__.py  activity.py  agent.py  data_prep.py  day_plan.py  household.py  llm.py  poi.py  prompts.py  sampling.py  skim.py  synthesis.py  tour.py  trip.py  zone.py
src/synth_pop/: __init__.py  buildings.py  io.py  population.py
tests/: conftest.py  test_activity.py  test_agent.py  test_buildings.py  test_core.py  test_data_prep.py  test_day_plan.py  test_export_grid.py  test_export_network.py  test_fetch_pois.py  test_household.py  test_io.py  test_llm.py  test_poi.py  test_population.py  test_prompts.py  test_sampling.py  test_simulate_helpers.py  test_skim.py  test_synthesis.py  test_tour.py  test_trip.py  test_zone.py
tests/workflow/: conftest.py  test__config.py  test_clean_grid.py  test_sample_households.py  test_simulate.py
webapp/: app.py  prepare_data.py
webapp/content/: about.md  config.yaml
webapp/static/: config.json  index.html  paper.html
workflow/: Snakefile  config.yaml
workflow/iterations/: baseline.yaml  v1_trip_rate.yaml  v2_realism.yaml
workflow/policies/: baseline.yaml  ebike.yaml
workflow/prompt_configs/: mode_realism.yaml  scheduling_strictness.yaml  trip_rate_fix.yaml
workflow/providers/: claude_haiku_4_5.yaml  gemini_2_0_flash.yaml  gemini_2_5_flash_lite.yaml  gpt_4o_mini_seed2.yaml  grok_4_1_fast_reasoning.yaml
(+41 files in other folders)
