[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "google-genai>=1.63.0",
    "openai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]
notebooks = [
    "jupyterlab>=4.0",
]
pipeline = [
    "geopandas>=1.0",
    "pyarrow>=15.0",
    "pyogrio>=0.10",
    "snakemake>=8.0",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aibm"]

[tool.ruff]
line-length = 88
src = ["src"]
exclude = ["workflow/Snakefile", "workflow/**/*.smk"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
